--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -353,6 +353,8 @@ spec:
         alertingEndpoints:
           - name: alertmanager
             namespace: monitoring
+            port: http
+
         replicas: 1
         shards: 4
         replicaExternalLabelName: __replica__
