fix: add service account mount

--- a/clusters/production/monitoring/grafana/helm.yaml
+++ b/clusters/production/monitoring/grafana/helm.yaml
@@ -178,5 +178,8 @@ spec:
       - esnet-matrix-panel
     serviceMonitor:
       enabled: true
+    serviceAccount:
+      create: true
+      autoMount: true
     persistence:
       enabled: false
