add pwpush ingress

--- a/clusters/production/istio/istio-rule.yaml
+++ b/clusters/production/istio/istio-rule.yaml
@@ -52,3 +52,14 @@ spec:
   trafficPolicy:
     tls:
       mode: ISTIO_MUTUAL
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: DestinationRule
+metadata:
+  name: pwpush-mtls
+  namespace: pwpush
+spec:
+  host: pwpush-http.pwpush.svc.cluster.local
+  trafficPolicy:
+    tls:
+      mode: ISTIO_MUTUAL
