--- a/clusters/production/portal/backend/secrets.sops.yaml
+++ b/clusters/production/portal/backend/secrets.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: domain-interface
     namespace: portal
 stringData:
-    admins: ENC[AES256_GCM,data:k5sVtUQ+88EdfqwDle8HfK6hO9EUmkQxFid+tlZUZ33OgScVHEimCZhSxoOF19xjFQNs2H84HuPqkeICo8HL25QLNHnHabyhnHBiwTV5VcD5hY7Axf8eXj8+m8b+iJOjCNufZFHBIU6/K1FFnkjC8L1R2w==,iv:vREOkjmS0M5oLuTLBgmoyEePcNzk59WCVgR/cAMye8Q=,tag:BgF5x8vmeKaSJTL5YPpknQ==,type:str]
+    admins: ENC[AES256_GCM,data:Pq50KbQPq1b8WnS5XrtHHT7ye1fo8zZqCmP7aKh0kP0n0ZLoh+H1SNNZNKGLAGGfyWVb7Bu8RbfSVFxrH78TFuetoaHydnHR1vSRpmHEs9dvjPeGu1UYQ1h49D9SA85/7nmIbkigP6Sk1if0Fuk6hAq7ng==,iv:1A3E44d385ST2VXThSoQZBrRwPbVE0x1eCKdIRrWzAI=,tag:FM6VbZz2WNwWB45IeEUfvg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,17 +14,45 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBMzVianZDTFRTMHJQcnN0
-            cFp1KzBVcnQrT1FvblYrQXRUdlMzUm1sSTFnClhxK3FSbEpreGVYVm5XVEhoWVFy
-            OHBzSE5SaHhsdmZETExNWFBsOW8vTjAKLS0tIEYvUWtXb1lCSEVhQmJ4VXc4QVp4
-            R3VGbnZnK215bmlTT05Tb00zSFhZMTgKWJnc0de93YTN9pIfnvqE+43I/cQh6UQg
-            UTlNA8+smQyXNUsJmg+5BsnioIXcCSmTBkCuAOfpGy2CTCcN9fXf/Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGeDVIcHU4dktVQnhJYmRO
+            NmluNTloRFFwQU43UC9xV29vTjNUdms3NTJzCkV2MklNUmZrNjJVdy9lKzBLb3Mv
+            ZzRPWjdFdEFmUTJ5M0VWMXN4d29BenMKLS0tIHBuU0NGbEJtTE8yMW00UTRiNG9p
+            Smt1bHFIeGJnN1pseVdDd3JMUlU4SVEKWDToJxPdjXWaakvf4p9Y6ek/ymTyR/CM
+            4HUSasHvlxYSumHliY9zG5PfgLeXJXyvdUEVPAd4FPiDAlZSgzYZVQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-28T05:25:25Z"
-    mac: ENC[AES256_GCM,data:gr+Y4NoM2og51F/301rkXk4+z5W8jwm6b3ElKS6Rmy0iThKYUmklk7r2ZmJhDUDCXky0bCwpdvFe3ddtwrIgXs3uT1qMGu/6ZkL8bxZt8FYAx5Fwrl0H3xfGPWoFE0qHm1f9QU6/TruEz2rhozbCTfcKf3vzXFiweFl9XVn2bJ0=,iv:RY7Nwx5UHKAvOSgSS+CnAh0gCf2vGi1HkDbjj/giLu8=,tag:f/x2hqh+CR8Ed68uec5/eg==,type:str]
+    lastmodified: "2024-04-01T17:16:34Z"
+    mac: ENC[AES256_GCM,data:q4wfeyK0KzifP+S7MbgDhp1tuRm5udhwY1zu1MqdO7Abdi66xw3g23y1JPGeJZn7XImLpUSxNV3SDVf9m1TC1T2F9Zp0Ycf1VV69NHmpS4KMpj9BTFOT5k1tDr+4g/mopaqIu/a2AUT5z976+TUKSQ01uvR5ZFKk5BQYO7zhT+I=,iv:9E1gPmHtTeMksFYd8slR7cUk7pmGiD/bTAcY5HxZxC4=,tag:4Ktf/EXaYS7xJygFzje1Bw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.8.1
+---
+apiVersion: v1
+kind: Secret
+metadata:
+    name: pki-backend
+    namespace: portal
+stringData:
+    sentry_dsn: ENC[AES256_GCM,data:RVHJFq3SUAhBdGvTLn5JGUmgAk8ZjU65+64cJmpH47T4RjYWcQrNa3yrUHW56q4WMPYt2enRFhXk,iv:k7Gs2Bxd+HDaMUcpIU16UF7Ho0oAU0FRtOy+fu92ezI=,tag:DcuST5HQ/oHBdWIwnCPjhg==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGeDVIcHU4dktVQnhJYmRO
+            NmluNTloRFFwQU43UC9xV29vTjNUdms3NTJzCkV2MklNUmZrNjJVdy9lKzBLb3Mv
+            ZzRPWjdFdEFmUTJ5M0VWMXN4d29BenMKLS0tIHBuU0NGbEJtTE8yMW00UTRiNG9p
+            Smt1bHFIeGJnN1pseVdDd3JMUlU4SVEKWDToJxPdjXWaakvf4p9Y6ek/ymTyR/CM
+            4HUSasHvlxYSumHliY9zG5PfgLeXJXyvdUEVPAd4FPiDAlZSgzYZVQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-04-01T17:16:34Z"
+    mac: ENC[AES256_GCM,data:q4wfeyK0KzifP+S7MbgDhp1tuRm5udhwY1zu1MqdO7Abdi66xw3g23y1JPGeJZn7XImLpUSxNV3SDVf9m1TC1T2F9Zp0Ycf1VV69NHmpS4KMpj9BTFOT5k1tDr+4g/mopaqIu/a2AUT5z976+TUKSQ01uvR5ZFKk5BQYO7zhT+I=,iv:9E1gPmHtTeMksFYd8slR7cUk7pmGiD/bTAcY5HxZxC4=,tag:4Ktf/EXaYS7xJygFzje1Bw==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
 ---
 apiVersion: v1
 kind: Secret
@@ -32,9 +60,9 @@ metadata:
     name: mail
     namespace: portal
 stringData:
-    mail_bcc: ENC[AES256_GCM,data:qHtuc0Ee0NS1sX8VUj9dekTm,iv:Ggwpm32KT1BUc1UFiG9+NxpMHS4QggzXwjlfGCKJyJg=,tag:37QhEosGnO089Y9Da1UyZA==,type:str]
-    mail_from: ENC[AES256_GCM,data:AixP0G2KzjABbfksNVsx6xBd,iv:TbeyIZJrMVjvFP67KKkMbabm/RZ3YaDGilBm+VaKvDI=,tag:oCu8zhFPXt8pubpKZGjjsg==,type:str]
-    mail_host: ENC[AES256_GCM,data:O20+6vlOf1JmKfOEqMQ=,iv:AGbfWYVAuSSZJ86Du+Wv1mjpAr3azuEI6D8QkGeABx8=,tag:vWrv53VZA+PEV52TQpnl/w==,type:str]
+    mail_bcc: ENC[AES256_GCM,data:K4LH/iNBd4rAEj7jZektsuor,iv:uIjHY42q0S1/r7irSppst5j4rXQVaG2zjcqEm91BgKA=,tag:pvcDSfG89a2j5R+6zP3Jdg==,type:str]
+    mail_from: ENC[AES256_GCM,data:PXX8sZygKdvhjtP86/QDPH8A,iv:8jorLHiAPBLeetzWY8ZniYdkSFY3fa+E3Nas3kZzlPo=,tag:a2dF1X3vuCK8ZGrn3cxl6A==,type:str]
+    mail_host: ENC[AES256_GCM,data:2ukH9IryKL4WEEBgIRE=,iv:wHmVyutC4nyHofioAzCS+6Nh9ho9ALMeDEZC/Jb8tNU=,tag:OO5/fgNNMGVqo9rXBiPMPg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -44,14 +72,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBMzVianZDTFRTMHJQcnN0
-            cFp1KzBVcnQrT1FvblYrQXRUdlMzUm1sSTFnClhxK3FSbEpreGVYVm5XVEhoWVFy
-            OHBzSE5SaHhsdmZETExNWFBsOW8vTjAKLS0tIEYvUWtXb1lCSEVhQmJ4VXc4QVp4
-            R3VGbnZnK215bmlTT05Tb00zSFhZMTgKWJnc0de93YTN9pIfnvqE+43I/cQh6UQg
-            UTlNA8+smQyXNUsJmg+5BsnioIXcCSmTBkCuAOfpGy2CTCcN9fXf/Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGeDVIcHU4dktVQnhJYmRO
+            NmluNTloRFFwQU43UC9xV29vTjNUdms3NTJzCkV2MklNUmZrNjJVdy9lKzBLb3Mv
+            ZzRPWjdFdEFmUTJ5M0VWMXN4d29BenMKLS0tIHBuU0NGbEJtTE8yMW00UTRiNG9p
+            Smt1bHFIeGJnN1pseVdDd3JMUlU4SVEKWDToJxPdjXWaakvf4p9Y6ek/ymTyR/CM
+            4HUSasHvlxYSumHliY9zG5PfgLeXJXyvdUEVPAd4FPiDAlZSgzYZVQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-28T05:25:25Z"
-    mac: ENC[AES256_GCM,data:gr+Y4NoM2og51F/301rkXk4+z5W8jwm6b3ElKS6Rmy0iThKYUmklk7r2ZmJhDUDCXky0bCwpdvFe3ddtwrIgXs3uT1qMGu/6ZkL8bxZt8FYAx5Fwrl0H3xfGPWoFE0qHm1f9QU6/TruEz2rhozbCTfcKf3vzXFiweFl9XVn2bJ0=,iv:RY7Nwx5UHKAvOSgSS+CnAh0gCf2vGi1HkDbjj/giLu8=,tag:f/x2hqh+CR8Ed68uec5/eg==,type:str]
+    lastmodified: "2024-04-01T17:16:34Z"
+    mac: ENC[AES256_GCM,data:q4wfeyK0KzifP+S7MbgDhp1tuRm5udhwY1zu1MqdO7Abdi66xw3g23y1JPGeJZn7XImLpUSxNV3SDVf9m1TC1T2F9Zp0Ycf1VV69NHmpS4KMpj9BTFOT5k1tDr+4g/mopaqIu/a2AUT5z976+TUKSQ01uvR5ZFKk5BQYO7zhT+I=,iv:9E1gPmHtTeMksFYd8slR7cUk7pmGiD/bTAcY5HxZxC4=,tag:4Ktf/EXaYS7xJygFzje1Bw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.8.1
