--- a/clusters/production/monitoring/thanos/helm.yaml
+++ b/clusters/production/monitoring/thanos/helm.yaml
@@ -44,6 +44,8 @@ spec:
     queryFrontend:
       enabled: true
       replicaCount: 2
+      ingress:
+        hostname: thanos-query-frontend.admin.hm.edu
       service:
         annotations:
           tailscale.com/expose: "true"
