set correct urls

--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -342,6 +342,7 @@ spec:
       thanosServiceMonitor:
         enabled: true
       prometheusSpec:
+        externalUrl: http://thanos-query-frontend.admin.hm.edu:9090
         additionalScrapeConfigsSecret:
           enabled: true
           name: hm-monitoring
