try fixing upgrades

--- a/core/system-upgrade/source.yaml
+++ b/core/system-upgrade/source.yaml
@@ -20,11 +20,12 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: system-upgrade-controller
-  namespace: system-upgrade
+  namespace: flux-system
 spec:
   interval: 24h
   path: "./manifests"
   prune: true
+  targetNamespace: system-upgrade
   sourceRef:
     kind: GitRepository
     name: system-upgrade-controller
