--- a/core/system-upgrade-plans.yaml
+++ b/core/system-upgrade-plans.yaml
@@ -3,13 +3,14 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: system-upgrade-plans
-  namespace: system-upgrade
+  namespace: flux-system
 spec:
   interval: 10m
   dependsOn:
   - name: system-upgrade-controller
   path: ./core/system-upgrade-plans
   prune: true
+  targetNamespace: system-upgrade
   sourceRef:
     kind: GitRepository
     name: flux-system
