--- a/clusters/production/internal.yaml
+++ b/clusters/production/internal.yaml
@@ -19,7 +19,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: .
+  path: flux-internal
   prune: true
   sourceRef:
     kind: GitRepository
