--- a/clusters/production/monitoring/grafana/helm.yaml
+++ b/clusters/production/monitoring/grafana/helm.yaml
@@ -176,6 +176,7 @@ spec:
       - grafana-clock-panel
       - grafana-opensearch-datasource
       - esnet-matrix-panel
+      - marcusolsson-static-datasource
     serviceMonitor:
       enabled: true
     serviceAccount:
